# authentic-tracker-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-push.yml
constants/: constants.py  schemas.py
data/: Gold_price_averages_in_a range_of_currencies_since_1978.xlsx  insert_gold_prices_inr.sql
db/: config_db.py  models.py
k8s/base/: argocd-app.yaml  deployment.yaml  externalsecret.yaml  service.yaml
k8s/overlays/prod/: kustomization.yaml
router/: goldRoutes.py
